# espzero

./: .readthedocs.yaml  README.md  __init__.py  _core.py  _hal.py  _touch.py  _wifi.py  package.json  pyproject.toml  vision.py
.github/workflows/: workflow.yml
docs/: api.rst  boards.rst  conf.py  contributing.rst  gettingstarted.rst  index.rst  license.rst  recipes.rst  requirements.txt
docs/en/: api.rst  boards.rst  contributing.rst  gettingstarted.rst  index.rst  license.rst  recipes.rst
docs/examples/: i2c_lcd.py  joystick.py  lcd.py  stepper_analog_clock.py  stepper_automatic_blinds.py
docs/images/: gettingstarted.rst
docs/uz/: api.rst  boards.rst  contributing.rst  gettingstarted.rst  index.rst  license.rst  recipes.rst
profiles/: __init__.py  _base.py  auto.py  esp32_boards.py
