[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "espzero"
version = "0.0.1"
authors = [
  { name="Neo Neopia-uz", email="neopia.uz@gmail.com" },
]
description = "Educational tool for physical computing and ESP32/ESP8266 development."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/roboticsware/espzero"
"Bug Tracker" = "https://github.com/roboticsware/espzero/issues"
