[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "espzero"
version = "0.0.3"
authors = [
  { name="Neo Neopia-uz", email="neopia.uz@gmail.com" },
]
description = "Educational tool for physical computing and ESP32/ESP8266 development."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/roboticsware/espzero"
"Bug Tracker" = "https://github.com/roboticsware/espzero/issues"

[tool.setuptools]
# 명시적으로 패키지 이름과 포함할 하위 패키지를 지정합니다.
packages = ["espzero", "espzero.profiles"]

[tool.setuptools.package-dir]
# 루트 디렉토리(.)의 모든 파이썬 파일을 espzero 패키지 내부로 매핑합니다.
"espzero" = "."
# profiles 폴더를 espzero의 하위 패키지인 espzero.profiles로 매핑합니다.
"espzero.profiles" = "profiles"
